--- a/index.html
+++ b/index.html
@@ -3,46 +3,62 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
   </head>
   <body>
     <header>
       <a href="">
         <img src="./assets/img/logo.svg" alt="logo" />
       </a>
-      <button>login</button>
+      <button class="btn">login</button>
     </header>
-    <section>
+    <section class="main-section">
       <h1>html+css. верстка</h1>
-      <div>
-        <h2>теория html + css. Структура приложения</h2>
-        <img src="./assets/img/img-1.svg" alt="theory html" />
-        <p>
-          Проговорим о том, что такое HTML и CSS. Создадим проект и рассмотрим
-          его файловую структуру. Научимся работать с макетом в Figma. Изучим 13
-          самых используемых тегов. Напишем HTML-структуру нашего приложения.
+      <div class="card">
+        <h2 class="card-title">теория html + css. Структура приложения</h2>
+        <img class="card-img" src="./assets/img/img-1.svg" alt="theory html" />
+        <p class="card-text">
+          Проговорим о том, что такое <span>HTML и CSS</span>. Создадим проект и
+          рассмотрим его файловую структуру. Научимся работать с макетом в
+          Figma. Изучим 13 самых используемых тегов. Напишем HTML-структуру
+          нашего приложения.
         </p>
       </div>
 
-      <div>
-        <h3>Стилизация HTML-элементов</h3>
-        <img src="./assets/img/img-2.svg" alt="styles html elements" />
-        <p>
+      <div class="card">
+        <h2 class="card-title">Стилизация HTML-элементов</h2>
+        <img
+          class="card-img"
+          src="./assets/img/img-2.svg"
+          alt="styles html elements"
+        />
+        <p class="card-text">
           Подключим шрифты. Рассмотрим самый правильный способ добавления
           стилей. Рассмотрим синтаксис написания стилей. Напишем стили для
-          элементов. Изучим популярные свойства . Посмотрим как располагать
-          элементы, используя Flexbox.
+          элементов. Изучим популярные <span>свойства</span> . Посмотрим как
+          располагать элементы, используя Flexbox.
         </p>
       </div>
 
-      <div>
-        <h4>Адаптив. Медиазапросы</h4>
-        <img src="./assets/img/img-3.svg" alt="media queries" />
-        <p>
+      <div class="card">
+        <h2 class="card-title">Адаптив. Медиазапросы</h2>
+        <img
+          class="card-img"
+          src="./assets/img/img-3.svg"
+          alt="media queries"
+        />
+        <p class="card-text">
           Сделаем наше приложение адаптивным, чтобы оно так же хорошо выглядело
           на планшетах и мобильных телефонах. Рассмотрим как работает св-во
-          flex-wrap. Научимся делать адаптив, используя медиазапросыне
+          flex-wrap. Научимся делать <span>адаптив</span>, используя
+          медиазапросыне
         </p>
       </div>
     </section>
