Fix some styles and start work with media queries

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
 
           <div class="card">
-            <h2 class="card-title">Стилизация HTML-элементов</h2>
+            <h2 class="card-title">Стилизация <br />HTML-элементов</h2>
             <img
               class="card-img"
               src="./assets/img/img-2.svg"
@@ -58,7 +58,10 @@
           </div>
 
           <div class="card">
-            <h2 class="card-title">Адаптив. Медиазапросы</h2>
+            <h2 class="card-title">
+              Адаптив. <br />
+              Медиазапросы
+            </h2>
             <img
               class="card-img"
               src="./assets/img/img-3.svg"
