Fix some styles and start work with media queries part 2

--- a/index.html
+++ b/index.html
@@ -58,10 +58,7 @@
           </div>
 
           <div class="card">
-            <h2 class="card-title">
-              Адаптив. <br />
-              Медиазапросы
-            </h2>
+            <h2 class="card-title small">Адаптив. Медиазапросы</h2>
             <img
               class="card-img"
               src="./assets/img/img-3.svg"
