Work with media queries

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>html+css. верстка</title>
   </head>
   <body>
     <header>
       <div class="container">
         <div class="header-wrapper">
           <a href="">
-            <img src="./assets/img/logo.svg" alt="logo" />
+            <img class="logo" src="./assets/img/logo.svg" alt="logo" />
           </a>
           <button class="btn">login</button>
         </div>
