--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
           </div>
 
           <div class="card">
-            <h2 class="card-title">Стилизация <br />HTML-элементов</h2>
+            <h2 class="card-title">
+              Стилизация <br />
+              HTML-элементов
+            </h2>
             <img
               class="card-img"
               src="./assets/img/img-2.svg"
